github authentication and github app
